# goal_jupyter_kernel

./: .gitignore  CHANGELOG.md  README.rst  _README.md  hatch_build.py  pyproject.toml  test_goal.py
goal_jupyter_kernel/: __init__.py  __main__.py  kernel.py
script/: clean  install  qa  run  test
