[project]
name = "goal_jupyter_kernel"
dynamic = ["version"]
description = "Jupyter kernel for the Goal array programming language"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Gregoire", email = "daniel.l.gregoire@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ipykernel",
    "jupyter_client",
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
test = ["jupyter_kernel_test"]

[project.urls]
Homepage = "https://github.com/semperos/goal_jupyter_kernel"

[build-system]
requires = ["hatchling>=1.10.0", "ipykernel"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "goal_jupyter_kernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]


[tool.hatch.build.targets.sdist]
include = ["/goal_jupyter_kernel"]

[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"

[dependency-groups]
dev = [
    "jupyter-kernel-test>=0.7.0",
    "ruff>=0.8.4",
]

[tool.ruff.lint]
extend-select = ["I"]
